# MLOps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  docker-compose.yaml  notebook.ipynb  pyproject.toml  setup.cfg
.dvc/: config
data/: .gitignore  prediction_target.csv  test_data.csv  test_data.csv.dvc  test_target.csv.dvc  train_data.csv  train_data.csv.dvc  train_target.csv  train_target.csv.dvc
iris_classifiers/: __init__.py  classify.py  fetch_data.py  infer.py  train.py  utils.py
model/: model.onnx  model.onnx.dvc  model.pkl
model_repository/sklearn-onnx/1/: config.pbtxt  model.onnx.dvc
