[tool.poetry]
name = "iris-classifiers"
version = "0.1.0"
description = "a simple iris classification package"
authors = ["Vadim Sorokin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.3.1"
requests = "^2.31.0"
pandas = "^1.5.3"
joblib = "^1.3.2"
skl2onnx = "^1.15.0"
dvc = "^3.30.0"
dvc-gdrive = "^2.19.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
